🆕 feat: Supports Arabic and RTL

--- a/src/SwashbucklerDiary.Gtk/Layout/MainLayout.razor
+++ b/src/SwashbucklerDiary.Gtk/Layout/MainLayout.razor
@@ -4,7 +4,10 @@
     <CascadingValue Value="@I18n.Culture.Name" Name="Culture">
         <ErrorBoundary>
             <ChildContent>
-                <MainLayoutNavDrawer Items="navigationButtons" IsPermanentPath="IsPermanentPath"></MainLayoutNavDrawer>
+                <MainLayoutNavDrawer Items="navigationButtons"
+                                     IsPermanentPath="IsPermanentPath"
+                                     RTL="@MasaBlazor.RTL">
+                </MainLayoutNavDrawer>
 
                 <MMain>
                     <PageCacheContainer PermanentPaths="permanentPaths">
