--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/TransferDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/TransferDialog.razor
@@ -24,7 +24,7 @@
                                  Class="rounded-pill"
                                  Height="10">
                 </MProgressLinear>
-                <span class="text-body-2 ml-2" style="white-space:nowrap;">
+                <span class="text-body-2 ms-2" style="white-space:nowrap;">
                     @Percentage.ToString("0.00") %
                 </span>
             </div>
