--- a/src/SwashbucklerDiary.Rcl/Components/GestureUnlock/GestureUnlock.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/GestureUnlock/GestureUnlock.razor
@@ -19,7 +19,7 @@
 
 
 @code {
-    private string InternalStyle => new StyleBuilder()
+    private string? InternalStyle => new StyleBuilder()
         .Add("background-color", "initial")
         .Add(Style)
         .ToString();
