--- a/src/SwashbucklerDiary.Rcl/Components/MarkdownEdit/MarkdownEdit.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MarkdownEdit/MarkdownEdit.razor
@@ -20,7 +20,7 @@
     <CustomMNavigationDrawer MyValue="MobileOutline"
                              MyValueChanged="MobileOutlineChanged"
                              Style="z-index:10;"
-                             Right="rightOutline"
+                             Right="rightOutline != MasaBlazor.RTL"
                              Fixed
                              Temporary
                              Touchless
