--- a/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/VditorMarkdownPreview.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/VditorMarkdownPreview.razor
@@ -9,7 +9,7 @@
         .Add(Class)
         .ToString();
 
-    string InternalStyle => new StyleBuilder()
+    string? InternalStyle => new StyleBuilder()
         .Add("flex", "1")
         .Add("min-width", "1px")
         .Add(Style)
