--- a/src/SwashbucklerDiary.Rcl/Components/ReadWrite/DiaryInfoButton.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/ReadWrite/DiaryInfoButton.razor
@@ -8,7 +8,7 @@
          Small
          Ripple="false"
          OnClick="@OnClick">
-    <MIcon Class="mr-1" Small>
+    <MIcon Class="me-1" Small>
         @Icon
     </MIcon>
     <wc-auto-scroll-text style="max-width:100%;">@Text</wc-auto-scroll-text>
