--- a/src/SwashbucklerDiary.Rcl/Components/SettingSwitch/SettingSwitch.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/SettingSwitch/SettingSwitch.razor
@@ -5,8 +5,7 @@
          TValue="bool"
          OnChange="HandleOnChange"
          Dense="true"
-         Inset="true"
-         Color="@MasaBlazor.Theme.CurrentTheme.OnSurface">
+         Inset="true">
 </MSwitch>
 
 
