--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/About/AboutPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/About/AboutPage.razor
@@ -12,7 +12,7 @@
            Rounded="@("lg")">
         <MList>
             <MListItem>
-                <MListItemAvatar Class="mr-8 hidden-xs-only"
+                <MListItemAvatar Class="me-8 hidden-xs-only"
                                  Rounded="@("lg")"
                                  Size="75">
                     <img src="@($"_content/{Essentials.StaticWebAssets.RclAssemblyName}/logo/logo.jpg")" />
