--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
@@ -18,7 +18,7 @@
                OnClick="@(() => To("user"))">
             <MList Style="width:100%;">
                 <MListItem ThreeLine>
-                    <MListItemAvatar Class="ml-sm-2 ml-md-4 mr-md-6"
+                    <MListItemAvatar Class="ms-sm-2 ms-md-4 me-md-6"
                                      Rounded="@("lg")"
                                      Size="70">
                         <img class="user-avatar" src="@(avatarResourceInfo?.DisPlayedUrl)" @onclick="() => showPreviewImage = true" @onclick:stopPropagation="true" />
