--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/CalendarSetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/CalendarSetting.razor
@@ -22,7 +22,7 @@
                     <wc-auto-scroll-text>@(I18n.T("First day of week"))</wc-auto-scroll-text>
                 </MListItemContent>
 
-                <MListItemContent Class="ml-2" Style="flex-basis:50%;">
+                <MListItemContent Class="ms-2" Style="flex-basis:50%;">
                     <MListItemSubtitle>
                         <wc-auto-scroll-text class="justify-end">@FirstDayOfWeekText</wc-auto-scroll-text>
                     </MListItemSubtitle>
