--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting/OutlineSetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting/OutlineSetting.razor
@@ -40,7 +40,8 @@
                 </MListItemContent>
                 <MListItemAction>
                     <SettingSwitch @bind-Value="rightOutline"
-                                   SettingKey="@nameof(Setting.RigthOutline)">
+                                   SettingKey="@nameof(Setting.RigthOutline)"
+                                   OnChange="HandleRigthOutlineOnChange">
                     </SettingSwitch>
                 </MListItemAction>
             </MListItem>
