--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/PermissionSettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/PermissionSettingPage.razor
@@ -21,7 +21,7 @@
                     <wc-auto-scroll-text>@(I18n.T("Camera permission"))</wc-auto-scroll-text>
                 </MListItemContent>
 
-                <MListItemContent Class="ml-2" Style="flex-basis:50%;">
+                <MListItemContent Class="ms-2" Style="flex-basis:50%;">
                     <MListItemSubtitle>
                         <wc-auto-scroll-text class="justify-end">@CameraPermission</wc-auto-scroll-text>
                     </MListItemSubtitle>
@@ -45,7 +45,7 @@
                     <wc-auto-scroll-text>@(I18n.T("Storage permission"))</wc-auto-scroll-text>
                 </MListItemContent>
 
-                <MListItemContent Class="ml-2" Style="flex-basis:50%;">
+                <MListItemContent Class="ms-2" Style="flex-basis:50%;">
                     <MListItemSubtitle>
                         <wc-auto-scroll-text class="justify-end">@StoragePermission</wc-auto-scroll-text>
                     </MListItemSubtitle>
