--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/SettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/SettingPage.razor
@@ -42,9 +42,9 @@
                     <wc-auto-scroll-text>@(I18n.T("Clear cache"))</wc-auto-scroll-text>
                 </MListItemContent>
 
-                <MListItemContent Class="ml-2" Style="flex-basis:50%;">
+                <MListItemContent Class="ms-2" Style="flex-basis:50%;">
                     <MListItemSubtitle>
-                        <wc-auto-scroll-text class="justify-end">@cacheSize</wc-auto-scroll-text>
+                        <wc-auto-scroll-text class="justify-end" text-ltr>@cacheSize</wc-auto-scroll-text>
                     </MListItemSubtitle>
                 </MListItemContent>
 
