--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/TemplateSettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/TemplateSettingPage.razor
@@ -69,7 +69,7 @@
                     <wc-auto-scroll-text>@(I18n.T("Use Template Method"))</wc-auto-scroll-text>
                 </MListItemContent>
 
-                <MListItemContent Class="ml-2" Style="flex-basis:50%;">
+                <MListItemContent Class="ms-2" Style="flex-basis:50%;">
                     <MListItemSubtitle>
                         <wc-auto-scroll-text class="justify-end">
                             @I18n.T(useTemplateKindItems.FirstOrDefault(it => it.Value == useTemplateMethod).Key)
