--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/UrlSchemePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/UrlSchemePage.razor
@@ -32,7 +32,7 @@
                             <wc-auto-scroll-text>@(I18n.T(item.Name))</wc-auto-scroll-text>
                         </MListItemTitle>
                         <MListItemSubtitle>
-                            <wc-auto-scroll-text>@($"{UrlScheme}://{item.Path}")</wc-auto-scroll-text>
+                            <wc-auto-scroll-text text-ltr>@($"{UrlScheme}://{item.Path}")</wc-auto-scroll-text>
                         </MListItemSubtitle>
                     </MListItemContent>
                     <MListItemAction>
