--- a/src/SwashbucklerDiary.Rcl/Pages/Search/SearchPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Search/SearchPage.razor
@@ -20,7 +20,7 @@
         </MButton>
     </ChildContent>
     <ExtensionContent>
-        <MChip Class="mr-2"
+        <MChip Class="me-2"
                Style="min-width:fit-content;"
                Active="ShowClearFilter"
                OnClick="ClearFilter">
