--- a/src/SwashbucklerDiary.Rcl/Pages/Welcome/WelcomeAgreement.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Welcome/WelcomeAgreement.razor
@@ -14,13 +14,13 @@
             </div>
 
             <div class="d-flex flex-column flex-sm-row-reverse">
-                <MButton Class="inverse-surface mb-5 flex-grow-1 ml-sm-2"
+                <MButton Class="inverse-surface mb-5 flex-grow-1 ms-sm-2"
                          Rounded="true"
                          Large="true"
                          OnClick="OnOK">
                     @(I18n.T("Agree"))
                 </MButton>
-                <MButton Class="mb-5 flex-grow-1 mr-sm-2"
+                <MButton Class="mb-5 flex-grow-1 me-sm-2"
                          Rounded="true"
                          Outlined="true"
                          Large="true"
