--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/ErrorDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/ErrorDialog.razor
@@ -7,7 +7,7 @@
          MaxWidth="420">
     <MCard>
         <MCardTitle Class="font-weight-bold flex-nowrap">
-            <MIcon Class="error--text mr-2">
+            <MIcon Class="error--text me-2">
                 cancel
             </MIcon>
             <wc-auto-scroll-text>@(I18n.T("Error"))</wc-auto-scroll-text>
