--- a/src/SwashbucklerDiary.Rcl/Components/MultiSize/MultiSizeMenu.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MultiSize/MultiSizeMenu.razor
@@ -66,7 +66,7 @@
                             <MListItem @key="item"
                                        Dense="true"
                                        OnClick="item.OnClick">
-                                <MListItemIcon Class="mr-3">
+                                <MListItemIcon Class="me-3">
                                     <MIcon Size="20">
                                         @(item.Icon)
                                     </MIcon>
