--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting/DiarySetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting/DiarySetting.razor
@@ -97,7 +97,7 @@
                     <wc-auto-scroll-text>@(I18n.T("Auto save"))</wc-auto-scroll-text>
                 </MListItemContent>
 
-                <MListItemContent Class="ml-2" Style="flex-basis:50%;">
+                <MListItemContent Class="ms-2" Style="flex-basis:50%;">
                     <MListItemSubtitle>
                         <wc-auto-scroll-text class="justify-end">@EditAutoSaveText</wc-auto-scroll-text>
                     </MListItemSubtitle>
@@ -121,7 +121,7 @@
                     <wc-auto-scroll-text>@(I18n.T("Time format"))</wc-auto-scroll-text>
                 </MListItemContent>
 
-                <MListItemContent Class="ml-2" Style="flex-basis:50%;">
+                <MListItemContent Class="ms-2" Style="flex-basis:50%;">
                     <MListItemSubtitle>
                         <wc-auto-scroll-text class="justify-end">
                             @(I18n.TForTimeFormat(DiaryTimeFormatKey))
