--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/UserPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/UserPage.razor
@@ -44,7 +44,7 @@
                     <wc-auto-scroll-text>@(I18n.T("NickName"))</wc-auto-scroll-text>
                 </MListItemContent>
 
-                <MListItemContent Class="ml-2" Style="flex-basis:50%;">
+                <MListItemContent Class="ms-2" Style="flex-basis:50%;">
                     <MListItemSubtitle>
                         <wc-auto-scroll-text class="justify-end">@NickName</wc-auto-scroll-text>
                     </MListItemSubtitle>
@@ -70,7 +70,7 @@
                     </MListItemTitle>
                 </MListItemContent>
 
-                <MListItemContent Class="ml-2" Style="flex-basis:50%;">
+                <MListItemContent Class="ms-2" Style="flex-basis:50%;">
                     <MListItemSubtitle>
                         <wc-auto-scroll-text class="justify-end">@Sign</wc-auto-scroll-text>
                     </MListItemSubtitle>
