♻️ refactor: Optimize the page height when the soft keyboard pops up on Web

--- a/src/SwashbucklerDiary.Rcl/Layout/MainLayoutBottomNav.razor
+++ b/src/SwashbucklerDiary.Rcl/Layout/MainLayoutBottomNav.razor
@@ -9,7 +9,7 @@
 <MBottomNavigation InputValue="Show"
                    Class="@Class"
                    ActiveClass="material-symbols_active"
-                   Style="background-color:initial;"
+                   Style="background-color:rgba(var(--m-theme-surface));"
                    Mandatory="true"
                    Routable
                    App="true">
