--- a/src/SwashbucklerDiary.Server/App.razor
+++ b/src/SwashbucklerDiary.Server/App.razor
@@ -21,6 +21,7 @@
 
     <link rel="stylesheet" href="@Assets["SwashbucklerDiary.Server.styles.css"]" />
     <link rel="stylesheet" href="@Assets["_content/SwashbucklerDiary.Rcl/css/app.css"]" />
+    <link rel="stylesheet" href="@Assets["_content/SwashbucklerDiary.Rcl.Web/css/app.css"]" />
     <link rel="stylesheet" href="@Assets["app.css"]" />
     <ImportMap />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
