--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/AppLockSetting/NumberPasswordDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/AppLockSetting/NumberPasswordDialog.razor
@@ -16,7 +16,7 @@
             <div class="d-flex justify-center scroll-show" style="width:100%;max-height:100%;overflow:auto;">
                 <div style="width:100%;height:fit-content;">
                     <NumberLock Title="@I18n.T(string.IsNullOrEmpty(firstValue) ? "Please enter password" : "Please enter the password again")"
-                                Value="@numberLockValue"
+                                @bind-Value="@numberLockValue"
                                 OnFinish="HandleOnFinish">
                     </NumberLock>
                 </div>
