🐛 fix(webview): replace default video poster with transparent bitmap

--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/vditor-extend.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/vditor-extend.css
@@ -57,6 +57,7 @@
     }
 
     .vditor-reset video {
+        background-color: #000;
         border-radius: 8px;
         max-height: unset;
     }
